js/js.translator/testData/incremental/invalidation/companionPropertiesWithCrossModuleInliner/lib2/l2.4.kt
fun test(): Int {
    return testStringProperty() +
            testIntProperty() +
            testPairProperty() +
            testFuncProperty()
}
